[project]
name = "cmd-line-helper"
version = "0.1.0"
description = "A command line helper tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ell-ai[all]>=0.0.15", "ipykernel>=6.29.5", "loguru>=0.7.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cmd-helper = "src.shell:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true
